fixed nav bar spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -179,6 +179,10 @@ footer a {
 		padding-top: 5px;
 	}
 
+	.drinks-container a {
+		font-size: 15px;
+	}
+
 	h1 {
 		font-size: 40px;
 	}
